Report work and minor program changes.
More work on the report and fixed some buggy program behaviour.